tests/pragmas/tpush_no_cast.nim
discard """
  errormsg: "a 'cast' pragma cannot be pushed"
"""

{.push cast(noSideEffect).}